--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,12 @@ jobs:
           pip install sphinx
           pip install solar-theme
           .\docs\make.bat html
-      - name: Archive
+      - name: Create archive
         shell: pwsh
         run: |
-          Rename-Item docs\build\html docs\build\dfir-orc-doc
-          Compress-Archive docs\build\dfir-orc-doc dfir-orc-doc.zip
+          Copy-Item -Recurse .\docs\build\html .\docs\build\dfir-orc-doc
+          Select-Location .\docs\build
+          Compress-Archive dfir-orc-doc dfir-orc-doc.zip
       - name: Upload archive
         uses: actions/upload-artifact@v3
         with:
