--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload archive
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ runner.temp }}/dfir-orc-doc.zip
+          path: .\docs\build\dfir-orc-doc.zip
       - name: Publish html pages
         if: github.ref == 'refs/heads/master'
         shell: pwsh
