--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build
         shell: pwsh
         run: |
@@ -26,6 +26,7 @@ jobs:
       - name: Upload archive
         uses: actions/upload-artifact@v3
         with:
+          name: dfir-orc-doc.zip
           path: .\docs\build\dfir-orc-doc.zip
       - name: Publish html pages
         if: github.ref == 'refs/heads/master'
