--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,14 @@ jobs:
           pip install sphinx
           pip install solar-theme
           .\docs\make.bat html
-      - name: Create archive
+      - name: Create archive artifact
         shell: pwsh
-        run: |
-          Copy-Item -Recurse .\docs\build\html .\docs\build\dfir-orc-doc
-          Set-Location .\docs\build
-          Compress-Archive dfir-orc-doc dfir-orc-doc.zip
-      - name: Upload archive
+        run: Copy-Item -Recurse .\docs\build\html .\docs\build\dfir-orc-doc
+      - name: Upload archive artifact
         uses: actions/upload-artifact@v3
         with:
           name: dfir-orc-doc.zip
-          path: .\docs\build\dfir-orc-doc.zip
+          path: .\docs\build\dfir-orc-doc
       - name: Publish html pages
         if: github.ref == 'refs/heads/master'
         shell: pwsh
