--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ fabienfl/requirement ]
   pull_request:
-    branches: [ master ]
+    branches: [ fabienfl/requirement ]
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
         shell: pwsh
         run: Copy-Item -Recurse .\docs\build\html .\docs\build\dfir-orc-doc
       - name: Upload archive artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dfir-orc-doc.zip
           path: .\docs\build\dfir-orc-doc
