--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: windows-2019
@@ -38,12 +41,14 @@ jobs:
         if: github.ref == 'refs/heads/master'
         shell: pwsh
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git clone --single-branch --branch master "https://$ENV:API_TOKEN_GITHUB@github.com/DFIR-ORC/dfir-orc.github.io.git"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git clone --single-branch --branch master "https://github.com/DFIR-ORC/dfir-orc.github.io.git"
           Copy-Item -Force -Recurse .\docs\build\html\* dfir-orc.github.io/
           cd dfir-orc.github.io/
           git add --all
           git status
-          git -c "user.name=dfir-orc-bot" -c "user.email=73876579+dfir-orc-bot@users.noreply.github.com" commit -m "Update by GitHub Action"
+          git commit -m "Update by GitHub Action"
           git push
