--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git clone --single-branch --branch master "https://github.com/DFIR-ORC/dfir-orc.github.io.git"
+          git clone --single-branch --branch master "https://${{ secrets.GITHUB_TOKEN }}@github.com/DFIR-ORC/dfir-orc.github.io.git"
           Copy-Item -Force -Recurse .\docs\build\html\* dfir-orc.github.io/
           cd dfir-orc.github.io/
           git add --all
